remodel/k8s/infra/network/gateway/gw-proxmox.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: proxmox
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.1.221
  listeners:
    - protocol: TLS
      port: 443
      name: proxmox-tls-passthrough
      hostname: "proxmox.euclid.stonegarden.dev"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
